# DL_for_AD_detection

./: .gitignore  README.md  convert_adni1_3Yr_3T_to_image.py  pyproject.toml  read_adni3_fMRI.py  requirements.txt  test_dataset_class.py  tmp_info.csv
config/demnet_wandb/: dataset.toml  lr_scheduler_config.toml  training.toml
config/example/: chained_lr_scheduler_example.toml  training_template.toml
config/test_code/: dataset.toml  lr_scheduler_config.toml  lr_scheduler_cosine_anealing.toml  training.toml
config/vgg_finetuning/: dataset.toml  lr_scheduler_config.toml  model.toml  training.toml
config_example/test_code/: dataset.toml  model_vgg.toml  optimizer_config.toml  training.toml
scripts/analysis/: compare_lr_schedulers.py  compare_lr_schedulers_V1.py  compute_avg_std_dataset.py  compute_avg_std_dataset_2D.py  compute_avg_std_dataset_3D.py  dicom_and_thresholding.py  dicom_visualize_3D_sample.py  distribution_data_V1_kaggle.py  evalute_trained_demnet_1.py  evalute_trained_demnet_2_transfer_learning.py
scripts/data_manipulation/: ADNI_extract_middle_slices.py  convert_all_subjects_ADNI_ONLY_2D_MRI_V1.py  convert_all_subjects_ADNI_ONLY_2D_MRI_V2.py  convert_all_subjects_ADNI_ONLY_2D_MRI_V3.py  convert_all_subjects_ADNI_ONLY_2D_MRI_V4_2.py  convert_subject_ADNI_ONLY_2D_MRI.py  convert_subject_ADNI_ONLY_2D_MRI_V3.py  create_ADNI_partition.py  create_labels_file_ADNI.py  create_labels_file_ADNI_V2.py  create_wandb_dataset_artifact.py  create_wandb_dataset_artifact_V1.py  interpolate_z_axis_all_dataset.py  merge_3D_dataset_tensor.py
scripts/test_code/: dataset_class_3D_mri.py  dataset_class_png.py  measure_reading_time_2.py  train_vgg_with_wandb.py  train_vgg_without_wandb.py
scripts/training/: demnet_ADNI_wandb.py  demnet_ADNI_wandb_V1.py  demnet_ADNI_wandb_V1_png.py  demnet_ADNI_wandb_V1_pth.py  demnet_ADNI_wandb_V2.py  demnet_ADNI_wandb_V3.py  demnet_kaggle_federated.py  demnet_kaggle_wandb.py  vgg_finetuning_kaggle.py  vgg_finetuning_kaggle_wandb.py
scripts/training_FL/: server_app.py  task.py
scripts_data_manipulation/: README.md  compute_avg_std_dataset.py  convert_adni1_3Yr_3T_to_image_1.py  convert_subject_ADNI_ONLY_2D_MRI_V1.py  convert_subject_ADNI_ONLY_2D_MRI_V2.py  convert_subject_ADNI_fMRI_to_png.py  tmp_dicom.py
scripts_hpc/: test_code_hpc.sh  test_code_local.sh  train_1_demnet_ADNI_wandb.sh  train_demnet_ADNI_wandb_chained_lr.sh  train_demnet_ADNI_wandb_cosine_anealing_lr.sh  train_demnet_ADNI_wandb_cosine_anealing_warm_lr.sh  train_demnet_ADNI_wandb_cyclic_lr.sh  train_demnet_ADNI_wandb_expr_lr.sh  train_demnet_ADNI_wandb_fixed_lr.sh
scripts_hpc/test_code/: check_memory_usage.sh  train_demnet_local.sh  train_hpc.sh  train_local_FL.sh  train_vgg_local.sh
scripts_hpc/train_demnet/: ADNI_wandb_chained_lr.sh
scripts_hpc/train_demnet_FL/: ADNI_wandb_expr_lr.sh  ADNI_wandb_expr_lr_local.sh
scripts_hpc/train_demnet_centralized/: ADNI_wandb_cosine_anealing_warm_lr.sh  ADNI_wandb_cyclic_lr.sh  ADNI_wandb_fix_lr.sh
scripts_hpc/train_vgg_centralized/: ADNI_wandb_expr_lr.sh
scripts_python/: README.md
scripts_python/analysis/: README.md  compare_lr_schedulers_V2.py  compute_avg_std_dataset_2D_png.py  compute_avg_std_dataset_3D.py  compute_max_dataset_3D.py  dicom_stats_3D_dataset.py  dicom_stats_single_files.py  distribution_data_V1_ADNI.py  distribution_data_V1_kaggle.py  evalute_trained_demnet_1.py  evalute_trained_demnet_2_transfer_learning.py  federated_std_experiment.py
scripts_python/data_manipulation/: ADNI_extract_middle_slices.py  ADNI_extract_middle_slices_CHECK.py  README.md  change_plane_axial_to_sagittal.py  check_specific_type_ADNI_ONLY_2D.py  create_dataset.py  create_dataset_pt_files.py  create_idx_files_for_federated_simulations.py  create_idx_files_for_federated_simulations_2.py  create_labels_file_ADNI_V2.py  create_wandb_dataset_artifact_V2.py  download_kaggle_dataset.py  interpolate_z_axis_single_sample_npy.py  interpolate_z_axis_single_sample_torch.py
scripts_python/test_code/: check_memory_usage_load_data.py  dataset_class_3D_mri.py  dataset_class_dcm.py  measure_reading_time_2.py  read_adni_3Yr_3T_1.py  train_vgg_with_wandb.py  train_vgg_without_wandb.py
scripts_python/training/: README.md  demnet_ADNI_wandb_1_pth.py  demnet_ADNI_wandb_2.py  demnet_ADNI_wandb_3.py  demnet_ADNI_wandb_V1_png.py  demnet_ADNI_wandb_V1_pth.py  demnet_ADNI_wandb_V2.py  demnet_ADNI_wandb_V3.py  demnet_centralized_V2.py  demnet_kaggle_wandb.py  reset_config_files.py  swin_transformer_centralized_V2.py  update_dataset_config.py  update_lr_scheduler.py  update_model_config_demnet.py  update_model_config_demnet_block.py  update_model_config_vgg.py  update_optimizer.py  update_training_config.py  vgg_ADNI_wandb.py  vgg_finetuning_kaggle.py  vgg_finetuning_kaggle_wandb.py  vgg_kaggle.py  vgg_kaggle_wandb.py
scripts_python/training_FL/: update_pyproject_file.py  update_server_config.py
scripts_python/training_FL/ADNI_fedavg_with_wandb/: client_app.py  pyproject.toml  server_app.py
scripts_python/training_FL/ADNI_fedavg_with_wandb/config/: dataset.toml  lr_scheduler_config.toml  server.toml  training.toml  training_client.toml
scripts_python/training_FL/kaggle_fedavg_with_wandb/: pyproject.toml  server_app.py
scripts_sh/: README.md
scripts_sh/create_config/: README.md  cosine_anealing_lr.sh  cosine_anealing_warm_lr.sh  cyclic_lr.sh  expr_lr.sh  fixed_lr.sh
scripts_sh/debug/: check_memory_usage.sh  train_demnet_hpc.sh  train_demnet_local_FL.sh  train_demnet_local_V2.sh  train_vgg_local.sh  (+2 more)
scripts_sh_V2/: 0_launch_debug.sh  0_launch_sbatch_cent.sh  demnet_cent.sh  swin_cent.sh
scripts_test_code/: dataset_class_dcm.py  measure_reading_time.py  measure_reading_time_1.py  read_adni_1Yr_3T_1.py  train_vgg_with_wandb.py  train_vgg_without_wandb.py
scripts_training/: demnet_kaggle_wandb.py  vgg_finetuning.py  vgg_finetuning_kaggle.py  vgg_finetuning_kaggle_wandb.py
src/: dataset.py  support_dataset.py
testing_scripts/: README.md  dataset_class.py  read_adni_3Yr_3T_1.py  test_dataset_class.py
training_scripts/: README.md
(+139 files in other folders)
