[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "addl"

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "Alzheimer_Deep_Learning_Detection"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = "A project focused on the analysis of Alzheimer's disease (AD) detection through Deep Learning"
dependencies = [
    "flwr[simulation]",
	"numpy",
	"matplotlib",
	"nibabel",
	"opencv-python",
	"pydicom",
	"toml",
    "torch",
    "torchvision",
]
[project.optional-dependencies]
extra = [
  "pytorch_grad_cam",
  "wandb",
]

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
# Flower settings

[tool.flwr.app]
publisher = "Alberto (Jesus) Zancanaro"

[tool.flwr.app.components]
# serverapp = "aaa.server_app:app"
# clientapp = "aaa.client_app:app"
serverapp = "scripts.training_FL.server_app:app"
clientapp = "scripts.training_FL.client_app:app_cl"

[tool.flwr.app.config]
# path_server_config = ''
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
