[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "addl"

# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

[project]
name = "Alzheimer_Deep_Learning_Detection"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name = "Alberto (Jesus) Zancanaro", email = "alberto.zancanaro.1@gmail.com" },
]
description = "A project focused on the analysis of Alzheimer's disease (AD) detection through Deep Learning (DL)"
dependencies = [
    "flwr[simulation]",
	"numpy",
	"matplotlib",
	"nibabel",
	"opencv-python",
	"pandas",
	"plotly",
	"pydicom",
	"toml",
    "torch",
    "torchvision",
]
[project.optional-dependencies]
extra = [
  "pytorch-gradcam",
  "wandb",
]
